src/objects/HardAccelEvent__c.object
<CustomObject>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HardAccelEvent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>HardAccelEvent</relationshipLabel>
        <relationshipName>HardAccelEvent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>g_force__c</fullName>
        <label>g_force</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>HardAccelEvent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HAE{0}</displayFormat>
        <label>HardAccelEvent</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HardAccelEvent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>